# say-cheeeeeeese

./: .gitignore  README.md
code/: app.py  const.py  pyproject.toml
code/labels/: labels.txt
