[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Uğur Çayoğlu <cayoglu@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sat-search = "^0.3.0"
intake = "^0.6.3"
intake-stac = "^0.3.0"
geopandas = "^0.10.1"
rasterio = "^1.2.9"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^21.9b0"

[tool.poetry.scripts]
main = "app:main"

[tool.black]
line-length = 140
target-version = ['py38']
